<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaboralActivity"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experiencia_laboral"
                android:layout_marginBottom="20dp"
                android:layout_margin="20dp"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/nombreCargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cargo"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="text"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/empresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/empresa"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="number"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/finicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_de_inicio"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="date"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/ffinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_de_finalizacion"
                android:textSize="20sp"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="date"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/agregarEstudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                />

            <Button
                android:id="@+id/Siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siguiente"
                android:layout_margin="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAccent"
                android:onClick="Siguiente"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>