<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRigth"
    android:background="@android:color/holo_red_light">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/FragmentRight" />

        <Button
            android:id="@+id/loginSQLite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginsqlite"
            android:layout_weight="1"
            android:onClick="onClick"
        />
        <Button
            android:id="@+id/loginWebService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginwebservice"
            android:layout_weight="1"
            android:onClick="onClick"
            />



    </LinearLayout>



</FrameLayout>